<resources>
    <string name="app_name">도담도담</string>

    <string-array name="generation_array">
        <item>1기</item>
        <item>2기</item>
        <item>3기</item>
        <item>4기</item>
        <item>5기</item>
        <item>6기</item>
        <item>7기</item>
    </string-array>

    <string name="meal_dummy">*기장밥 , 김치어묵국 , *명태껍질볶음 , 새송이돈육마늘구이 , *짜먹는요거트 , *꽃상추쌈/쌈장</string>
    <string name="meal_name_dummy">조식</string>

    <string name="nav_home">홈</string>
    <string name="nav_news">소식</string>
    <string name="nav_song">기상송</string>
    <string name="nav_profile">내 정보</string>
    <string name="home_meal">오늘의 급식</string>
    <string name="project_name">도담도담</string>
    <string name="today_song">오늘의 기상송</string>
    <string name="title_song">내일의 기상송</string>
    <string name="now_song_application">신청현황</string>
    <string name="my">My</string>
    <string name="apply_wakeup_song">기상송 신청</string>
    <string name="sit_application">자습실 신청</string>
    <string name="modify">수정</string>
    <string name="study_room_apply">자습실 신청</string>
    <string name="period_eight">8교시</string>
    <string name="period_eight_time">17:00 ~ 17:20</string>
    <string name="home_song">오늘의 기상송</string>
    <string name="show_point">상벌점 조회</string>
    <string name="profile_modify_desc">프로필 수정 아이콘</string>
    <string name="text_grade">학년</string>
    <string name="text_name">이름 (2~10)</string>
    <string name="text_email">이메일 (10~30)</string>
    <string name="text_dormitory">기숙사</string>
    <string name="school">학교</string>
    <string name="prize_point">상점</string>
    <string name="penalty_point">벌점</string>
    <string name="title_out">외출/외박</string>
    <string name="title_bus">버스 신청</string>
    <string name="title_night_study">심자</string>
    <string name="text_night_study_phone">휴대폰 필요 여부</string>
    <string name="title_night_study_write">심자 신청</string>
    <string name="text_night_study_place">심자 장소</string>
    <string name="text_night_date_start">시작 날짜</string>
    <string name="text_night_date_end">종료 날짜</string>
    <string name="text_out_desc">설마 무단 외출은 아니지?</string>
    <string name="text_bus_desc">드디어 집 갈 시간!</string>
    <string name="apply">신청하기</string>
    <string name="text_other">기타</string>
    <string name="back_to_home_desc">back to home</string>
    <string name="go_to_write_out_desc">go to write out</string>
    <string name="text_ok">확인</string>
    <string name="text_range_hour">0~23</string>
    <string name="text_range_minutes">0~59</string>
    <string name="colon">:</string>
    <string name="text_wave">~</string>
    <string name="title_bus_apply">귀가 버스 신청</string>
    <string name="text_bus_start_time">출발시간</string>
    <string name="title_important_news">중요한 뉴스</string>
    <string name="title_popular_text">일반 뉴스</string>
    <string name="title_all_news">모든 뉴스</string>
    <string name="title_my_news">나의 뉴스</string>
    <string name="more">더보기 ></string>
    <string name="text_my_apply">신청 내역 확인</string>
    <string name="text_my_apply_desc">내가 뭐 신청했더라?</string>
    <string name="title_setting">설정</string>
    <string name="text_setting_desc">도담을 잘 활용하는 방법</string>
    <string name="title_song_apply">기상송 신청</string>
    <string name="text_song_apply_desc">원하는 곡의 유튜브 링크를 올려주세요</string>
    <string name="text_youtube_link_hint">https://www.youtube.com/watch?v=</string>
    <string name="text_apply">신청하기</string>
    <string name="text_simple_apply">신청 ></string>
    <string name="title_recommend_music">추천 음악</string>
    <string name="title_study_room_apply">자습실 신청</string>
    <string name="text_more_function">이런 기능도 있어요</string>
    <string name="text_baek_rank_card_desc">대소고 알고리즘 장인은?</string>
    <string name="title_baek_rank">백랭</string>
    <string name="title_lost_and_found">분실물 찾기</string>
    <string name="text_lost_and_found">내 물건 찾아줘..</string>
    <string name="text_night_study">심자 신청도 도담에서!</string>
    <string name="title_it_map">여기 선배 it을 지도?</string>
    <string name="text_it_map_desc">졸업한 선배의 회사를 알고싶다면</string>
    <string name="text_search">검색</string>
    <string name="text_write_comment">댓글 달기</string>
    <string name="text_input_comment">댓글 입력…</string>
    <string name="title_comment">댓글</string>
    <string name="title_write_lost_found">분실물 작성</string>
    <string name="text_lost">분실물</string>
    <string name="text_found">습득물</string>
    <string name="text_location">장소 (필수 X)</string>
    <string name="text_title">제목</string>
    <string name="text_content">내용</string>
    <string name="text_image_delete">사진 삭제</string>
    <string name="text_image_add">사진 추가</string>
    <string name="title_menu">서비스 전체 보기</string>
    <string name="nav_meal">급식</string>
    <string name="title_meal">급식</string>
    <string name="bus_ride_possible">탑승 가능</string>
    <string name="bus_ride_impossible">탑승 불가</string>
    <string name="text_sign_in">로그인</string>
    <string name="team_name">B1ND</string>
    <string name="text_id">아이디 (5~20)</string>
    <string name="text_auto_login">자동 로그인</string>
    <string name="text_join">회원가입</string>
    <string name="text_password">비밀번호 (7~20)</string>
    <string name="text_sign_up_desc">계정이 없다면?</string>
    <string name="text_password_right">비밀번호 확인</string>
    <string name="text_class">반</string>
    <string name="text_number">번</string>
    <string name="text_phone">전화번호 ( - 제외)</string>
    <string name="text_detail_info">상세 정보</string>
    <string name="text_next">다음으로</string>
    <string name="text_use_agree">필수 이용약관 동의</string>
    <string name="text_personal_info"><![CDATA[> 개인정보 취급방침]]></string>
    <string name="text_service_operation"><![CDATA[> 서비스 운영정책]]></string>
    <string name="text_sign_out">로그아웃</string>
    <string name="text_quit">회원 탈퇴</string>

    <string name="link_service_policy">http://dodam.b1nd.com/detailed-information/service-policy</string>
    <string name="link_personal_info">http://dodam.b1nd.com/detailed-information/personal-information</string>

    <string name="text_meal_people">급식의 민족</string>
    <string name="text_meal_people_desc">내가 원하는 급식을 먹고 싶다면?</string>
    <string name="text_edit_profile">프로필 수정</string>
    <string name="text_change_desc">기본 이미지로 변경</string>
    <string name="text_save">저장</string>
    <string name="text_bus_not">버스가 없어요</string>
    <string name="text_no_data">값이 없어요</string>
    <string name="cancel">취소하기</string>
    <string name="_kebab">⋮</string>

    <string name="pref_key_thumbnail" translatable="false">pref_thumbnail</string>
    <string name="text_now_selected_song_empty">아직 기상송이 선정되지 않았어요</string>
    <string name="text_wait">조금만 기다려주시기 바랍니다</string>
    <string name="text_please_apply_song">기상송을 신청해주세요</string>
    <string name="title_out_write">외출/외박 신청</string>
    <string name="text_no_out">신청된 외출/외박이 없어요</string>
    <string name="text_no_night_study">신청한 심자가 없어요</string>
    <string name="text_today_meal_calorie">오늘 삼시세끼 칼로리는?</string>
    <string name="text_is_right">위의 영상이 맞나요?</string>
    <string name="text_no">아니요</string>
    <string name="text_youtube_search_desc">원하는 곡 제목을 입력하여 검색해 주세요</string>
    <string name="text_do_search">검색하기</string>
    <string name="text_song_title">곡 제목을 입력해 주세요</string>
    <string name="title_search_song">기상송 검색</string>
    <string name="text_youtube_confirm_desc">영상을 꼼꼼히 확인해 주세요</string>
    <string name="text_re_search_desc">혹시 원하는 영상이 아니라면 다시 검색해 주세요</string>

    <string name="text_out_sleeping_date">외박 날짜</string>
    <string name="text_out_sleeping_time">외박 시간</string>
    <string name="text_out_time_end">복귀 시간</string>

    <string name="text_out_going_date">외출 날짜</string>
    <string name="text_out_going">외출</string>
    <string name="text_out_sleeping">외박</string>
    <string name="text_out">외출/외박</string>
    <string name="text_out_sleeping_date_end">복귀 날짜</string>
    <string name="text_reason">사유</string>
    <string name="text_out_going_time">외출 시간</string>
    <string name="title_company_detail">회사 상세 보기</string>
    <string name="text_study_room">자습실</string>
    <string name="title_point">상벌점 조회</string>
    <string name="text_navigate_sign_up">도담도담 계정이 없어요</string>
    <string name="text_my_lostfound">내 게시물</string>
    <string name="text_edit_comment">댓글을 수정하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="text_dodam_desc">더 나은 학교를 만들기 위해 함께하는</string>
    <string name="text_dodam_main_desc">B1ND 스마트 스쿨</string>
    <string name="text_copy_link">링크 복사</string>
    <string name="text_calorie_unit">Kcal</string>
    <string name="view">화면</string>
    <string name="dark_mode">다크 모드</string>
    <string name="info">정보</string>
    <string name="account">계정</string>
    <string name="version">버전 정보</string>
    <string name="license">오픈소스 라이선스</string>
    <string name="service">서비스 운영정책</string>
    <string name="personal">개인정보 취급방침</string>
    <string name="text_song_search_hint">노래, 앨범, 아티스트 검색</string>
    <string name="text_apply_short">신청</string>
    <string name="text_search_desc">더욱 상세한 정보를 검색해 보세요!</string>
    <string name="text_start">시작하기</string>
    <string name="text_pw_description">최소 하나의 문자와, 숫자, 특수문자가 포함되어야 합니다.</string>
    <string name="text_test">test</string>
    <string name="dauth_login">로그인</string>
    <string name="dodam">도담도담 </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
