<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="kr.hs.dgsw.smartschool.dodamdodam.features.sign.signUp.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.features.sign.signup.SignUpActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_btn_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_black"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_detail_info"
                android:textColor="@color/color_black"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/title3"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/layout_action_bar"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/layout_sign_up"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/text_name"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeErrorColor="@android:color/holo_red_light"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="15" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="40dp" >

                    <EditText
                        android:id="@+id/edit_grade"
                        android:layout_width="0dp"
                        android:maxLength="1"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_grade"
                        android:textColor="@color/color_black" />

                    <EditText
                        android:id="@+id/edit_class"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLength="1"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_class"
                        android:textColor="@color/color_black" />

                    <EditText
                        android:id="@+id/edit_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLength="1"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_number"
                        android:textColor="@color/color_black" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/text_email"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeErrorColor="@android:color/holo_red_light"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLength="30" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/text_phone"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeErrorColor="@android:color/holo_red_light"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="11" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:buttonTint="@color/main"
                    android:checked="true"
                    android:text="@string/text_use_agree" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:textSize="@dimen/title6"
                    android:text="@string/text_personal_info"
                    android:textColor="@color/gray700" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:textSize="@dimen/title6"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_service_operation"
                    android:textColor="@color/gray700" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/main"
            android:text="@string/text_sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/title3"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>