<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="kr.hs.dgsw.smartschool.dodamdodam.features.auth.join.JoinDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.features.sign.signup.SignUpActivity">

        <include
            android:id="@+id/btn_back"
            layout="@layout/item_back_button" />

        <LinearLayout
            android:id="@+id/layout_join"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btn_join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back">

            <TextView
                android:id="@+id/tv_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_bold"
                android:includeFontPadding="false"
                android:text="@string/text_join"
                android:textColor="@color/color_black"
                android:textSize="@dimen/title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/progress_loading"
                layout="@layout/item_loading_progressbar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="20dp"
                android:hint="@string/text_name"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <kr.hs.dgsw.smartschool.dodamdodam.widget.DodamTextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_regular"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLength="10"
                    android:text="@={vm.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_grade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/noto_regular"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="@={vm.grade}"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_grade"
                    android:textColor="@color/color_black" />

                <EditText
                    android:id="@+id/edit_class"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/noto_regular"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="@={vm.room}"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_class"
                    android:textColor="@color/color_black" />

                <EditText
                    android:id="@+id/edit_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/noto_regular"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@={vm.number}"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_number"
                    android:textColor="@color/color_black" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="20dp"
                android:hint="@string/text_email"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <kr.hs.dgsw.smartschool.dodamdodam.widget.DodamTextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_regular"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:text="@={vm.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="20dp"
                android:hint="@string/text_phone"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <kr.hs.dgsw.smartschool.dodamdodam.widget.DodamTextInputEditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_regular"
                    android:includeFontPadding="false"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:text="@={vm.phone}" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:buttonTint="@color/main"
                android:fontFamily="@font/noto_regular"
                android:includeFontPadding="false"
                android:text="@string/text_use_agree" />

            <TextView
                android:id="@+id/tv_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/noto_regular"
                android:includeFontPadding="false"
                android:text="@string/text_personal_info"
                android:textColor="@color/main"
                android:textSize="@dimen/title6" />

            <TextView
                android:id="@+id/tv_service_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/noto_regular"
                android:includeFontPadding="false"
                android:text="@string/text_service_operation"
                android:textColor="@color/main"
                android:textSize="@dimen/title6" />

        </LinearLayout>

        <kr.hs.dgsw.smartschool.dodamdodam.widget.DodamButton
            android:id="@+id/btn_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginBottom="30dp"
            android:onClick="@{() -> vm.checkForm()}"
            android:text="@string/text_join"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>