<?xml version="1.0" encoding="utf-8"?>
<layout>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/card_corner"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_edit_comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tv_title"/>

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="230dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_marginTop="20dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_update"
            app:layout_constraintHorizontal_bias="0.5"
            android:textColor="@color/color_white"
            app:layout_constraintTop_toBottomOf="@id/et_comment"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="126dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            app:layout_constraintTop_toBottomOf="@id/et_comment"
            android:layout_height="60dp"
            android:textColor="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            tools:layout_editor_absoluteY="122dp"
            android:text="@string/modify"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
</layout>